# aws-greengrass-lite

./: .clang-format  .cspell.json  CMakeLists.txt  README.md  RELEASE_NOTES.md  fc_deps.json  flake.nix
.github/workflows/: ci.yml  debian-bookworm-packaging.yml  raspbian-packaging-aarch64.yml  uat-deployment-tests.yml  uat-security-tests.yml  uat-testing.yml  uat.yml
docs/: DEVELOPMENT.md  PKCS11_SUPPORT.md  TPM_SUPPORT.md
docs/design/: ggconfigd.md  gghealthdd-design.md
docs/fleet_provisioning/: fleet-provisioning-cfn.yaml  fleet_provisioning.md  generate_claim_tpm.sh
misc/: dictionary.txt  iwyu_mappings.yml
modules/aws-iot-call/: CMakeLists.txt
modules/core-bus/: CMakeLists.txt
modules/core-bus-aws-iot-mqtt/: CMakeLists.txt
modules/core-bus-gg-config/: CMakeLists.txt
modules/core-bus-gghealthd/: CMakeLists.txt
modules/core-bus-sub-response/: CMakeLists.txt
modules/core_mqtt/: CMakeLists.txt
modules/fleet-provisioning/: CMakeLists.txt
modules/fleet-provisioning/include/: fleet-provisioning.h
modules/fleet-provisioning/src/: cloud_request.c  cloud_request.h  config_operations.c  config_operations.h  entry.c  pki_ops.c  pki_ops.h  tpm_pki.c  tpm_pki.h
modules/gg-fleet-statusd/: CMakeLists.txt
modules/ggconfigd/: CMakeLists.txt
modules/ggdeploymentd/: CMakeLists.txt
modules/gghealthd/: CMakeLists.txt
modules/ggipc-auth/: CMakeLists.txt
modules/ggipcd/: CMakeLists.txt
modules/ggl-binpath/: CMakeLists.txt
modules/ggl-cli/: CMakeLists.txt
modules/ggl-common/: CMakeLists.txt
modules/tesd/: CMakeLists.txt
utils/: dictionary.txt
(+229 files in other folders)
